fix link break on small devices

--- a/src/elements/blog/codigo-blog.less
+++ b/src/elements/blog/codigo-blog.less
@@ -35,6 +35,9 @@
   h3 {
     font-size: 1em;
   }
+  a {
+    word-break: break-all;
+  }
 
   + .codigo__blog-item {
     margin-top: 50px;
